# yaspec

./: Cargo.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/examples/todo/: yaspec.yaml
cli/src/: main.rs  ts.rs
cli/templates/ts/: action.txt  description.txt  entity.txt  root.txt  service.txt  shape.txt
openapi/: Cargo.toml
openapi/src/: lib.rs  parse.rs
types_jsonschema/: Cargo.toml
types_jsonschema/src/: draft_2020_12.rs  lib.rs
types_jsonschema/tests/: draft_2020_12.rs
types_jsonschema/tests/snapshots/: draft_2020_12__string_email.snap
types_openapi/: Cargo.toml
types_openapi/src/: lib.rs
types_openapi/src/v3_0/: mod.rs  util.rs
types_openapi/src/v3_1/: migrate.rs  mod.rs  util.rs
yaspec/: Cargo.toml  LICENSE
yaspec/src/: lib.rs
