[package]
name = "yaspec-cli"
description = "Generate code from YASpec"
license = "AGPL-3.0"
version = "0.1.0"
edition = "2021"

[dependencies]
yaspec = { path = "../yaspec" }
askama = "0.12.1"
serde = { version = "1.0.207", features = ["derive"] }
serde_yaml = "0.9.34"
derive_more = { version = "1.0.0", features = ["deref"] }
