[package]
name = "types_openapi"
version = "0.1.0"
edition = "2021"

[dependencies]
types_jsonschema = { path = "../types_jsonschema" }
indexmap = { version = "2.5.0", features = ["serde"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_with = "3.9.0"
serde_json = "1.0.128"

[dev-dependencies]
insta = { version = "1.40.0", features = ["ron", "yaml"] }
